Let us go to the another page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div>
-  This is the anselme's portofolio website Holla
+  This is the anselme's portofolio website Holla <br>
+  <a href="">Let us go to the about us page</a>
 </div>
