--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <div>
-  This is the anselme's portofolio website Holla <br>
-  <a href="">Let us go to the about us page</a>
+  <app-header></app-header>
+  <app-home></app-home>
+  <app-about></app-about>
+  <app-services></app-services>
+  <app-questions></app-questions>
+  <app-skills></app-skills>
+  <app-footer></app-footer>
 </div>
