--- a/src/app/components/home/footer/footer.component.html
+++ b/src/app/components/home/footer/footer.component.html
@@ -1,6 +1,16 @@
-<div class="root">
-  <div class="row mx-0">
-    <div class="col-lg-3 col-12 pb-5 pt-4">
+<div class="root px-lg-5 px-1 pt-3">
+  <div class="row mx-lg-5 mx-1">
+    <div class="col-lg-3 col-md-6 col-12">
+      <h4 class="pt-4 font-weight-bolder">About Anselme</h4>
+      <p class="about text-white pt-3">
+        I'm a multi-talented human with over 2+ years of
+        experiences in wide range of software development disciplines.
+        I help agencies, individuals , small and large businesses bring their ideas to life
+        and connect with their customers in a digital way.
+      </p>
+    </div>
+
+    <div class="col-lg-3 col-md-6 col-12 pb-5 pt-4">
       <div class="services">
         <h4 class="font-weight-bolder pl-4 pb-4">My services</h4>
         <ul>
@@ -17,14 +27,7 @@
         </ul>
       </div>
     </div>
-    <div class="col-lg-4 col-12">
-      <h4 class="pt-4 pb-5 font-weight-bolder">Images</h4>
-      <div class="composition">
-        <img src="assets/grrenking.jpg" alt="photo 1" class="composition-photo composition-p1">
-        <img src="assets/hey.jpg" alt="photo 2" class="composition-photo composition-p2">
-        <img src="assets/greenmtr.jpg" alt="photo 3" class="composition-photo composition-p3">
-      </div>
-    </div>
+
     <div class="col-lg-5 py-3 col-12">
       <div class="p-2">
         <h4 class="font-weight-bolder">Contact me</h4>
@@ -32,16 +35,16 @@
           <div class="row">
             <div class="col-6 form-group">
               <label for="names" class="text-white">Full Names</label>
-              <input id="names" type="text" class="form-control">
+              <input id="names" type="text" class="form-control form-control-sm">
             </div>
             <div class=" col-6 form-group">
               <label for="email" class="text-white">Your Email</label>
-              <input id="email" type="text" class="form-control">
+              <input id="email" type="text" class="form-control form-control-sm">
             </div>
           </div>
           <div class="form-group">
             <label for="message" class="text-white">Your Message</label>
-            <textarea id="message" rows="5" class="form-control"></textarea>
+            <textarea id="message" rows="4" class="form-control form-control-sm"></textarea>
           </div>
           <button class="btn btn-success px-5 shadow-lg mt-3">
             SEND
