--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="root">
-  <div class="p-lg-5 p-2 mx-lg-5 mx-5">
+  <div class="p-lg-5 p-2 mx-md-5 mx-2">
     <div class="text-1 pt-5 mt-5">Hey, Iam</div>
     <div class="text-2">IRUMVA H. Anselme</div>
     <div class="text-3">and I am a <span class="font-weight-bolder">Software Engneer</span> and <span class="font-weight-bolder">designer</span></div>
