--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,18 +1,20 @@
 <div class="row px-lg-5 p-3 mx-0 my-5">
-  <div class="col-lg-6 col-12 text-right">
+  <div class="col-md-6 col-12 text-right">
     <img src="../../../../assets/about-img.png" alt="About image" class="img-fluid">
   </div>
-  <div class="col-lg-6 col-sm-12 paragraph text-justify text-left">
-    <h2>About me</h2>
-    <div class="line"></div>
-    <p class="pt-4">
-      Hi, I’m Anselme. I'm a multi-talented human with over 2+ years of
-      experiences in wide range of software development disciplines.
-      I help agencies and businesses bring their ideas to life.
-    </p>
-    <p>
-      You can also call me a product designer, Full stack developer, UI, UX
-      or by any other market defined function-title.
-    </p>
+  <div class="col-md-6 col-sm-12 paragraph text-justify text-left">
+    <h2 class="text-center text-md-left">About me</h2>
+    <div class="line mx-auto mx-md-0"></div>
+    <div class="pt-4 text-justify text-md-left">
+      <p>
+        Hi, I’m Anselme. I'm a multi-talented human with over 2+ years of
+        experiences in wide range of software development disciplines.
+        I help agencies and businesses bring their ideas to life.
+      </p>
+      <p>
+        You can also call me a product designer, Full stack developer, UI, UX
+        or by any other market defined function-title.
+      </p>
+    </div>
   </div>
 </div>
