--- a/src/app/components/home/header/header.component.html
+++ b/src/app/components/home/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="my-header header navbar navbar-expand-lg px-lg-5">
+<nav class="my-header header navbar navbar-expand-md px-lg-5">
   <div class="text-right">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="mdi mdi-menu"></span>
@@ -7,17 +7,17 @@
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
     <div class="d-flex justify-content-between align-items-center w-100">
-      <a class="navbar-brand d-sm-none d-lg-block" href="#">
+      <a class="navbar-brand d-sm-none d-md-block" href="#">
         <div class="d-none d-md-block">
           <img src="assets/logo-white.png" alt="">
         </div>
       </a>
       <div>
-        <div class="d-block d-lg-flex">
-          <div class="my-nav-link px-lg-4 py-sm-3 px-0 text-right"><a href=""></a>HOME</div>
-          <div class="my-nav-link px-lg-4 py-sm-3 px-0 text-right"><a href=""></a>ABOUT ME</div>
-          <div class="my-nav-link px-lg-4 py-sm-3 px-0 text-right"><a href=""></a>CONTACT ME</div>
-          <div class="my-nav-link px-lg-4 py-sm-3 px-0 text-right"><a href=""></a>SERVICES</div>
+        <div class="d-md-flex d-block">
+          <div class="my-nav-link px-md-4 py-2 px-0 text-right"><a href="">HOME</a></div>
+          <div class="my-nav-link px-md-4 py-2 px-0 text-right"><a href="">ABOUT ME</a></div>
+          <div class="my-nav-link px-md-4 py-2 px-0 text-right"><a href="">CONTACT ME</a></div>
+          <div class="my-nav-link px-md-4 py-2 px-0 text-right"><a href="">SERVICES</a></div>
         </div>
       </div>
       <div class="d-none d-md-block">
