--- a/src/app/components/home/questions/questions.component.html
+++ b/src/app/components/home/questions/questions.component.html
@@ -1,6 +1,6 @@
-<div class="pt-5 mt-5">
+<div>
   <div class="py-5 m-lg-5 m-2">
-    <h5 class="text-uppercase font-weight-bolder pt-5 pt-md-0 mt-5 mt-md-0">Questions</h5>
+    <h5 class="text-uppercase font-weight-bolder pt-5 pt-md-0 mt-5 mt-md-0 mx-3">Questions</h5>
     <div class="row mt-5 px-md-5 px-2">
       <div *ngFor="let question of questions" class="col-lg-4 col-12 py-2">
         <div class="question">Q. {{ question.name }} </div>
