--- a/src/app/components/home/about/about.component.css
+++ b/src/app/components/home/about/about.component.css
@@ -1,12 +1,10 @@
-.line
-{
+.line {
   height: 2px;
   max-width: 300px;
   background-color: gray;
 }
 
-.paragraph p
-{
+.paragraph p {
   font-size: 14px;
   max-width: 430px;
 }
