--- a/src/app/components/home/about/about.component.html
+++ b/src/app/components/home/about/about.component.html
@@ -1,6 +1,10 @@
 <div class="row px-lg-5 p-3 mx-0 my-5">
   <div class="col-md-6 col-12 text-right">
-    <img src="../../../../assets/about-img.png" alt="About image" class="img-fluid">
+    <img
+      src="../../../../assets/about-img.png"
+      alt="About image"
+      class="img-fluid"
+    />
   </div>
   <div class="col-md-6 col-sm-12 paragraph text-justify text-left">
     <h2 class="text-center text-md-left">About me</h2>
@@ -8,12 +12,12 @@
     <div class="pt-4 text-justify text-md-left">
       <p>
         Hi, I’m Anselme. I'm a multi-talented human with over 2+ years of
-        experiences in wide range of software development disciplines.
-        I help agencies and businesses bring their ideas to life.
+        experiences in wide range of software development disciplines. I help
+        agencies and businesses bring their ideas to life.
       </p>
       <p>
-        You can also call me a product designer, Full stack developer, UI, UX
-        or by any other market defined function-title.
+        You can also call me a product designer, Full stack developer, UI, UX or
+        by any other market defined function-title.
       </p>
     </div>
   </div>
