--- a/src/app/components/home/service/service.component.html
+++ b/src/app/components/home/service/service.component.html
@@ -9,7 +9,7 @@
     <div class="card-label text-uppercase text-center pb-3">{{ lable }}</div>
     <div class="my-card-body text-center p-3">{{ description }}</div>
     <div class="mt-4 mx-3">
-      <button class="btn btn-primary btn-block text-uppercase shadow-sm">request a quote</button>
+      <button class="btn btn-primary btn-block text-uppercase shadow-sm" (click)="request_quote()">request a quote</button>
     </div>
   </div>
 </div>
