--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,3 @@
 <div>
-  <app-header></app-header>
-  <app-home></app-home>
-  <app-about></app-about>
-  <app-services></app-services>
-  <app-questions></app-questions>
-  <app-skills></app-skills>
-  <app-footer></app-footer>
+  <router-outlet></router-outlet>
 </div>
