--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -3,6 +3,6 @@
     <div class="text-1 pt-5 mt-5">Hey, Iam</div>
     <div class="text-2">IRUMVA H. Anselme</div>
     <div class="text-3">and I am a <span class="font-weight-bolder">Software Engneer</span> and <span class="font-weight-bolder">designer</span></div>
-    <button class="btn btn-outline-primary px-5 mt-5 py-2 font-weight-bolder text-capitalize">Hire Me</button>
+    <button class="btn btn-outline-primary px-5 mt-5 py-2 font-weight-bolder text-capitalize" (click)="hire_me()">Hire Me</button>
   </div>
 </div>
