--- a/src/app/components/home/questions/questions.component.css
+++ b/src/app/components/home/questions/questions.component.css
@@ -1,17 +1,14 @@
-.question
-{
+.question {
   font-weight: 600;
   padding-bottom: 10px;
   font-size: 17px;
   font-family: "Lato", sans-serif;
 }
-.answer
-{
+.answer {
   text-align: justify;
   font-size: 14px;
 }
 
-h5
-{
+h5 {
   margin-top: 120px;
 }
