--- a/src/app/components/home/service/service.component.css
+++ b/src/app/components/home/service/service.component.css
@@ -1,50 +1,42 @@
-.card-title-header
-{
-  color: #2F2E41;
+.card-title-header {
+  color: #2f2e41;
 }
 
-.card-label
-{
-  color: #E5CF08;
+.card-label {
+  color: #e5cf08;
   font-size: 13px;
 }
 
-.my-card-body
-{
+.my-card-body {
   font-size: 14px;
   max-width: 300px;
   margin: auto;
 }
 
-.btn-primary
-{
-  background-color: #2F2E41;
+.btn-primary {
+  background-color: #2f2e41;
   border: none;
   font-size: 13px;
   border-radius: 0;
-  font-family: "Lato",sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
-.root
-{
-  transition: .5s;
+.root {
+  transition: 0.5s;
   cursor: pointer;
 }
 
-.root:hover
-{
-  box-shadow: 0 20px 20px 0 rgba(0,0,0,0.10);
+.root:hover {
+  box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.1);
   z-index: 2;
   transform: scale(1.05) translateY(-20px);
 }
 
-.card-icon
-{
+.card-icon {
   text-align: center;
   font-size: 70px;
 }
 
-.card-icon span
-{
-  color: #2F2E41;
+.card-icon span {
+  color: #2f2e41;
 }
