--- a/src/app/components/home/services/services.component.html
+++ b/src/app/components/home/services/services.component.html
@@ -1,4 +1,4 @@
-<div class="root pb-5">
+<div class="root py-5">
   <div class="header text-center">
     <h3 class="text-uppercase font-weight-bold">{{ title }}</h3>
     <p>I provide a lot of services but categorized in these three, For more information you may call me or message me on many platforms
@@ -14,7 +14,7 @@
     <div class="contact-me-card card text-white shadow-lg">
       <div class="row p-4 px-5 mx-0">
         <div class="col-lg-4 col-md-6 col-12 interested pt-1">
-          <h3 class="text-md-left text-center">Intrested in doing a project togather</h3>
+          <h3 class="text-md-left text-center">interested in doing a project together</h3>
         </div>
         <div class="col-lg-4 col-md-6 col-12 text-center">
           <p class="text-white description">Send me an email about your project and
